[package]
name = "csv-json-exchange-wasm"
version = "0.1.1"
authors = ["Yoshitaka motomura"]
edition = "2021"
description="This project provides a WebAssembly module to convert CSV data to JSON data. It can accept both text and binary CSV data."
license = "MIT"
repository = "git@github.com:yoshitaka-motomura/csv-json-excange-wasm.git"
readme = "README.md"
keywords = ["wasm", "csv", "json"]
categories = ["wasm", "csv", "json"]
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
csv = "1.2.2"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
